# cetrinet

./: .gitignore  Makefile  README.md  meson.build  windows.xcc
asan/: lsan.supp
meson/: assets  wildcard
src/: cetrinet.cpp  globals.h  lcui.css  main.css  main.xml  net.cpp  net.h  state.cpp  state.h  ui.cpp  ui.h  util.cpp  util.h
src/proto/: auth.cpp  auth.h  base.cpp  base.h  channel.h  channellist.cpp  channellist.h  channelupdate.cpp  channelupdate.h  cmsg.cpp  cmsg.h  error.cpp  error.h  greadystate.cpp  greadystate.h  gstart.cpp  gstart.h  gstop.cpp  gstop.h  gtick.cpp  gtick.h  join.cpp  join.h  message.h  motd.cpp  motd.h  msg.cpp  msg.h  part.cpp  part.h  smsg.cpp  smsg.h  user.h  userlist.cpp  userlist.h
src/proto/internal/: channel.h  message.h  user.h
